feat: implement Spring Security with JWT authentication and role-based access control